--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,17 @@ server:
 spring:
 #  数据源配置
     datasource:
-        url: jdbc:mysql://localhost:3306/easypan?useSSL=false&serverTimezone=UTC
+        url: jdbc:mysql://localhost:3306/qiutuan_all_powerful?useSSL=false&serverTimezone=UTC
         username: root
         password: 123456789qt
         driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+
+mybatis-plus:
+  configuration:
+    #关闭驼峰命名
+    map-underscore-to-camel-case: false
 
 
 
