--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,17 +3,39 @@ server:
 
 
 spring:
-#  数据源配置
-    datasource:
-        url: jdbc:mysql://localhost:3306/xxxxx?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true
-        username: xxxxx
-        password: xxxxx
-        driver-class-name: com.mysql.cj.jdbc.Driver
-#上传文件大小限制
-    servlet:
-        multipart:
-            max-file-size: 100MB
-            max-request-size: 100MB
+  #  数据源配置
+  datasource:
+    url: jdbc:mysql://localhost:3306/xxxxx?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true
+    username: xxxxx
+    password: xxxxx
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  # redis 配置
+  redis:
+    # 地址
+    host: xxxxx
+    # 端口，默认为6379
+    port: 6379
+    # 数据库索引
+    database: 0
+    # 密码
+    password:
+    # 连接超时时间
+    timeout: 10s
+    lettuce:
+      pool:
+        # 连接池中的最小空闲连接
+        min-idle: 0
+        # 连接池中的最大空闲连接
+        max-idle: 8
+        # 连接池的最大数据库连接数
+        max-active: 8
+        # #连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1ms
+  #上传文件大小限制
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
 
 
 mybatis-plus:
@@ -22,6 +44,8 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     #关闭驼峰命名   如果开启驼峰命名请注释此配置
     map-underscore-to-camel-case: false
+  global-config:
+    banner: false
 
 
   # TODO 腾讯云对象存储配置
@@ -46,7 +70,7 @@ minio:
 # CosManager    腾讯云对象存储
 file:
   manager: MinioManager
-    # manager: CosManager
+  # manager: CosManager
 
 
 # 接口文档配置
